feat(6): Agregamos deploy en docker